# SchedulrAI

./: AGENTS.md  README.md  pyproject.toml
apps/cli/: demo.py
docs/: implementation-roadmap.md  phase-1-execution-board.md  phase-2-execution-board.md  phase-3-execution-board.md  system-design.md
evals/parsing/: seed_requests.json
evals/scheduling/: happy_path_cases.json
services/calendar/: provider.py
services/execution/: core.py
services/intent_parser/: happy_path.py
services/scheduler/: core.py
shared/schemas/: __init__.py  scheduling.py
tests/fixtures/: mock_availability.json  scheduling_request.json
tests/unit/: test_execution.py  test_intent_parser.py  test_scheduler.py
